--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,7 @@ coverage/
 .env.production.local
 
 # PII Files
-data/output/
-data/input/
+data/input/*
+data/output/*
+!data/input/.gitkeep
+!data/output/.gitkeep
